# zephyr-optee-client

./: CMakeLists.txt  Kconfig
.github/workflows/: ci.yaml
libckteec/: CMakeLists.txt
libckteec/src/: invoke_ta.c  local_utils.h  pkcs11_token.c
libseteec/: CMakeLists.txt
libseteec/include/: se_tee.h
libteec/: CMakeLists.txt
libteec/include/: tee.h
libteec/src/: tee_client_api.c  teec_trace.c
public/: tee_client_api.h  tee_supplicant.h  teec_trace.h
tee_supplicant/: CMakeLists.txt
tee_supplicant/include/: ree_fs.h  teec_ta_load.h
tee_supplicant/src/: ree_fs.c  tee_supplicant.c  tee_supplicant.h  teec_ta_load.c
zephyr/: module.yml
